Avoid a crash in gupnp_root_device_constructor()

The network interface used by GUPnPContext might not be usable
at the point where gupnp_root_device_constructor() is run, which
resulted in warnings and a crash when the code tried to use a
SoupURI pointer that was NULL.

Handle this by letting the GUPnPRootDevice construction fail.

Signed-off-by: Sven Neumann <neumann@teufel.de>

https://bugzilla.gnome.org/show_bug.cgi?id=780640